
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int OPTION_CHOICE ;


 int ADD_TEST (int ) ;
 char* BIO_new_file (char const*,char*) ;
 char* NCONF_new (int *) ;
 int OPT_EOF ;


 int TEST_note (char*) ;
 int TEST_ptr (char const*) ;
 int change_path (char const*) ;
 char const* conf ;
 int expect_failure ;
 char const* in ;
 int opt_next () ;
 int test_check_null_numbers ;
 int test_check_overflow ;
 char* test_get_argument (int ) ;
 int test_load_config ;

int setup_tests(void)
{
    const char *conf_file;
    OPTION_CHOICE o;

    if (!TEST_ptr(conf = NCONF_new(((void*)0))))
        return 0;

    while ((o = opt_next()) != OPT_EOF) {
        switch (o) {
        case 129:
            expect_failure = 1;
            break;
        case 128:
            break;
        default:
            return 0;
        }
    }

    conf_file = test_get_argument(0);
    if (!TEST_ptr(conf_file)
        || !TEST_ptr(in = BIO_new_file(conf_file, "r"))) {
        TEST_note("Unable to open the file argument");
        return 0;
    }





    change_path(conf_file);

    ADD_TEST(test_load_config);
    ADD_TEST(test_check_null_numbers);
    ADD_TEST(test_check_overflow);
    return 1;
}
